--- a/flask_todo/templates/index.html
+++ b/flask_todo/templates/index.html
@@ -16,7 +16,7 @@
             <ul>
                 {% for todo in todos %}
                 <li>
-                    {{ todo }} <a href="{{ url_for('delete', todo_id=loop.index0) }}">Ta bort</a>
+                    {{ todo[1] }} <a href="{{ url_for('delete', todo_id=todo[0]) }}">Ta bort</a>
                 </li>
                 {% endfor %}
             </ul>
