--- a/flask_todo/templates/index.html
+++ b/flask_todo/templates/index.html
@@ -5,6 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>To-Do List</title>
         <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        />
+        <link
             rel="stylesheet"
             type="text/css"
             href="{{ url_for('static', filename='css/colors.css') }}"
@@ -22,41 +30,66 @@
                 <input type="text" name="todo" placeholder="New Task" required />
                 <button type="submit">Add Todo</button>
             </form>
-            <ul>
-                {% for todo in todos %}
-                <li>
-                    <strong>{{ todo.task }}</strong> - Created: {{ todo.created_at }} - Status: {{
-                    'Completed' if todo.completed else 'Not completed' }} {% if not todo.completed
-                    %}
-                    <a class="green" href="{{ url_for('toggle', todo_id=todo.id) }}"
-                        >[Mark as completed]</a
-                    >
-                    {% else %}
-                    <a class="orange" href="{{ url_for('toggle', todo_id=todo.id) }}"
-                        >[Reset to Not Completed]</a
-                    >
-                    {% endif %}
 
-                    <!-- Edit -->
-                    <a
-                        class="blue"
-                        href="#"
-                        onclick="openEditModal('{{ todo.id }}', '{{ todo.task }}')"
-                    >
-                        [Edit]
-                    </a>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Task</th>
+                        <th>Created</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for todo in todos %}
+                    <tr>
+                        <td>
+                            <strong class="{% if todo.completed %}task-completed{% endif %}"
+                                >{{ todo.task }}</strong
+                            >
+                        </td>
+                        <td>{{ todo.created_at }}</td>
+                        <td
+                            class="{% if todo.completed %}status-completed{% else %}status-not-completed{% endif %}"
+                        >
+                            {{ 'Completed' if todo.completed else 'Not completed' }}
+                        </td>
+                        <td class="actions">
+                            <!-- Toggle Complete/Incomplete -->
+                            {% if not todo.completed %}
+                            <a class="green" href="{{ url_for('toggle', todo_id=todo.id) }}">
+                                <i class="fas fa-check-square fa-lg"></i>
+                            </a>
+                            {% else %}
+                            <a class="orange" href="{{ url_for('toggle', todo_id=todo.id) }}">
+                                <i class="fas fa-undo-alt fa-lg"></i>
+                            </a>
+                            {% endif %}
 
-                    <!-- Delete -->
-                    <a
-                        class="red"
-                        href="{{ url_for('delete', todo_id=todo.id) }}"
-                        onclick="return confirm('Are you sure you want to delete this task?')"
-                        >[Delete]</a
-                    >
-                </li>
-                {% endfor %}
-            </ul>
+                            <!-- Edit -->
+                            <a
+                                class="blue"
+                                href="#"
+                                onclick="openEditModal('{{ todo.id }}', '{{ todo.task }}')"
+                            >
+                                <i class="fas fa-edit fa-lg"></i>
+                            </a>
+
+                            <!-- Delete -->
+                            <a
+                                class="red"
+                                href="{{ url_for('delete', todo_id=todo.id) }}"
+                                onclick="return confirm('Are you sure you want to delete this task?')"
+                            >
+                                <i class="fas fa-trash fa-lg"></i>
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
+
         <!-- Edit Task Modal -->
         <div id="editModal" class="modal">
             <div class="modal-content">
